[project]
name = "dqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "gym>=0.26.2",
    "gymnasium[accept-rom-license,atari,classic-control]",
    "ignite>=1.1.0",
    "jupyter",
    "moviepy",
    "mypy",
    "numpy",
    "opencv-python",
    "ptan",
    "pytest",
    "pytorch-ignite",
    "ray[tune]",
    "stable-baselines3",
    "tensorboard",
    "torch",
    "torchrl",
    "torchvision",
]
